<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ColliSION</string>
    <string name="action_settings">Settings</string>
    <string name="open">Start Avoid Collision</string>
    <string name="stop">Stop Avoid Collision</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="myPosition">my</string>
    <string name="otherPosition">other</string>

</resources>